# Education

./: .cursorignore  .env.template  .gitignore  README.md  apis.txt  config.py  database.py  difficult_word.py  grammarQA_generation.txt  grammar_question_answer.py  language_learning_apis.py  main.py  models.py  mongodb_client.py  pyproject.toml  story_generator.py  test.py  test1.py  unseen_passage_generator.py
routers/: auth.py  dashboard.py  grammar.py  profile.py  reading.py  speaking.py  vocabGeneration.txt  vocabulary.py  writing.py
utils/: allFunctions.py  jwt.py
